# message-broker-comparison-lab

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  mcp_server.py  pyproject.toml  test_api.http
app/: config.py  lifespan.py  schemas.py
app/api/: __init__.py  benchmark_routes.py  health.py  kafka_routes.py  monitoring_routes.py  rabbitmq_routes.py  redis_routes.py  resilience_routes.py
app/brokers/: __init__.py  base.py  kafka_broker.py  rabbitmq_broker.py  redis_broker.py
app/mcp/: server.py
app/monitoring/: __init__.py  kafka_lag.py  metrics.py  timer.py
app/resilience/: __init__.py  backpressure.py  circuit_breaker.py
data/: mock_generator.py
data/mock/: bulk_orders.json  chat_messages.json  delivery_timeline.json  images_metadata.json  payments.json  saga_orders.json  support_questions.json  tickets.json
image-processor/: Dockerfile  go.mod  go.sum
image-processor/cmd/: main.go
image-processor/internal/config/: config.go
image-processor/internal/handler/: image.go
infra/: prometheus.yml
infra/grafana/dashboards/: broker-lab.json
infra/grafana/provisioning/dashboards/: default.yml
notebooks/: 01_project_overview.ipynb  02_redis_deep_dive.ipynb  03_rabbitmq_deep_dive.ipynb  04_kafka_deep_dive.ipynb  05_benchmark_and_visualization.ipynb  06_monitoring_and_aop.ipynb  07_advanced_patterns.ipynb  08_reliability_patterns.ipynb  09_concurrency_and_distribution.ipynb  10_delayed_messages_and_saga.ipynb  11_challenge_payment.ipynb  12_challenge_ticket_booking.ipynb  13_challenge_group_chat.ipynb  14_challenge_bulk_processing.ipynb  15_challenge_saga_order.ipynb  16_challenge_realtime_delivery.ipynb  17_challenge_image_pipeline.ipynb  18_challenge_ai_semantic_cache.ipynb  19_beanllm_broker_synergy.ipynb  20_high_throughput_tuning.ipynb  21_production_patterns.ipynb
tests/: conftest.py  test_benchmark_endpoints.py  test_challenge_scenarios.py  test_health.py  test_kafka_endpoints.py  test_rabbitmq_endpoints.py  test_redis_advanced.py  test_redis_endpoints.py  test_resilience.py
